; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/ps3/extr_if_glc.c_glc_intr_filter.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/ps3/extr_if_glc.c_glc_intr_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.glc_softc = type { i32*, i32 }

@FILTER_SCHEDULE_THREAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @glc_intr_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @glc_intr_filter(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.glc_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.glc_softc*
  store %struct.glc_softc* %5, %struct.glc_softc** %3, align 8
  %6 = call i32 (...) @powerpc_sync()
  %7 = load %struct.glc_softc*, %struct.glc_softc** %3, align 8
  %8 = getelementptr inbounds %struct.glc_softc, %struct.glc_softc* %7, i32 0, i32 1
  %9 = load %struct.glc_softc*, %struct.glc_softc** %3, align 8
  %10 = getelementptr inbounds %struct.glc_softc, %struct.glc_softc* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @atomic_set_64(i32* %8, i32 %12)
  %14 = load i32, i32* @FILTER_SCHEDULE_THREAD, align 4
  ret i32 %14
}

declare dso_local i32 @powerpc_sync(...) #1

declare dso_local i32 @atomic_set_64(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
